<resources>
    <string name="app_name">Women</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre Apellido</string>
    <string name="nav_header_subtitle">correo@women.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ventas">Ventas</string>
    <string name="title_activity_vender">Vender</string>
    <string name="title_activity_mis_prod">MisProd</string>
    <string name="title_activity_ver__usuarios">Ver_Usuarios</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_activity_mis_compras">MisCompras</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_productos">Productos</string>
    <string name="title_activity_comprar">Comprar</string>
    <string name="title_activity_productos_en_venta">ProductosEnVenta</string>
    <string name="title_activity_productos_pendientes">Productos Pendientes</string>
    <string name="responder">Responder</string>
    <string name="Bloquear">BLOQUEAR</string>
    <string name="ADD_ADMIN">AÑADIR ADMINISTRADOR</string>
    <string name="cantidad">Cantidad</string>
    <string name="Enviar">ENVIAR</string>
    <string name="comentario">Escribe un Comentario</string>
    <string name="comentar">COMENTAR</string>
    <string name="talla">Talla</string>
    <string name="color">Color</string>
    <string name="fecha">Fecha</string>
    <string name="me_gusta">Me gusta demasiado este producto</string>
    <string name="report">REPORTAR</string>
    <string name="COLORES">Colores</string>
    <string name="stock">Stock</string>
    <string name="precio">Precio</string>
    <string name="comprar">COMPRAR</string>
    <string name="APROBAR">APROBAR</string>
    <string name="DENEGAR">DENEGAR</string>
    <string name="user_name" />
    <string name="user_name_">Nombre de Usuario</string>
    <string name="respomder_upper">RESPONDER</string>
    <string name="vender">Vender un Producto</string>
    <string name="cant_prod">Cantidad de Productos</string>
    <string name="cost_pr">Costo de Producto</string>
    <string name="desc">Descripción</string>
    <string name="tallas">Tallas</string>
    <string name="cate">Categoría</string>
    <string name="add_photo">AÑADIR FOTO</string>
    <string name="vender_">VENDER</string>
    <string name="entregar">ENTREGAR</string>
    <string name="rop">Ropa</string>
    <string name="mis_comp">Mis Compras</string>
    <string name="mis_pro">Mis Productos</string>
    <string name="mis_ven">Mis ventas</string>
    <string name="title_activity_sended">Mensajes Enviados</string>
    <string name="title_activity_received">Mensajes Recibidos</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="password">Contraseña</string>
    <string name="date">Domingo 2 de Diciembre del 2018 02:27</string>
    <string name="prompt_email">Ems</string>
</resources>
