<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MisProd"
    tools:showIn="@layout/app_bar_mis_prod">

    <TextView
        android:id="@+id/color2"
        android:layout_width="113dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="Azul, Verde"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/talla2" />

    <TextView
        android:id="@+id/talla2"
        android:layout_width="113dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="Small, Medium"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/product2" />

    <TextView
        android:id="@+id/cantidad2"
        android:layout_width="113dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="15 Unidades"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/color2" />

    <TextView
        android:id="@+id/cantidad3"
        android:layout_width="113dp"
        android:layout_height="22dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="S/. 50.00"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/cantidad2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:onClick="next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/next" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:onClick="prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/prev" />

    <ImageView
        android:id="@+id/product2"
        android:layout_width="229dp"
        android:layout_height="235dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoe1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="112dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#fc4683"
        android:padding="5dp"
        android:text="@string/stock"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cantidad2"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="112dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:width="200dp"
        android:background="#fc4683"
        android:padding="5dp"
        android:text="@string/precio"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cantidad3"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:width="200dp"
        android:background="#fc4683"
        android:padding="5dp"
        android:text="@string/talla"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/talla2"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/product2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="113dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:width="200dp"
        android:background="#fc4683"
        android:padding="5dp"
        android:text="@string/COLORES"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/color2"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</android.support.constraint.ConstraintLayout>